# forx

./: Cargo.toml  LICENSE  basic_os.txt
cimpl/block/: bcache.c  bdev.c  bdflush.c  disk.c  fops.c  partition.c
cimpl/fs/: dev.c  dir.c  exec.c  file.c  fs.c  inode.c  inode_table.c  namei.c  params.c  pipe.c  poll.c  seq_file.c  super.c  sys.c  vfs.c
cimpl/include/: container_of.h  hlist.h  ida.h  kbuf.h  klog.h  ktimer.h  list.h  time.h  types.h
cimpl/init/: init.c
cimpl/kernel/: autogroup.c  char_buf.c  char_buf_test.c  crc.c  debug.c  dump_mem.c  ida.c  kbuf.c  kbuf_test.c  klog.c  kparam.c  ksym.c  ktest.c  ktimer.c  reboot.c  sched.c  sched_internal.h  semaphore.c  signal.c  sleep.c  sys_user.c  task.c  task_procfs.c  task_sys.c  time.c  uname.c  user.c  usetask.c  wait_queue.c  workqueue.c
cimpl/libctl/: basic_printf.c  list_sort.c  printf.c  rbtree.c  skip_list.c  sort.c  sprintf.c  strerror.c  strerror.pl  string.c  strtol.c  syscall.c
cimpl/mm/: bootmem.c  kmalloc.c  mmap.c  page_alloc.c  page_table.c  sbrk.c  slab.c  vm.c  vm_area.c
cimpl/net/: addr_family.c  linklayer.c  net.c  netdev.c  packet.c  packet_queue.c  protocol.c  (+5 more)
exp/: Cargo.toml
exp/fs/: permissions.rs
exp/kernel/heap/: heap.rs
exp/kernel/lock/: spinlock.rs
exp/kernel/resource/: process.rs  pthread.rs
exp/kernel/resource/mem/: frame_allocator.rs
exp/kernel/scheduler/: schedule.rs
exp/libctl/syscalls/: syscall.rs
exp/src/: main.rs
fs/: file.rs  inode.rs  permissions.rs  super.rs
kernel/: elf.rs  page_allocator.rs  stack.rs  tasks.c
libctl/: panic.rs
src/: main.rs
(+73 files in other folders)
