[package]
name = "forx"
version = "0.1.0"
license = "MPL-2.0"
description = "An open and collaborative research operating system kernel"
categories = ["operating-system"]
repository = "https://github.com/londoed/forx"
authors = ["Eric Londo <londoed@protonmail.com>"]
edition = "2018"
rust = "1.51.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.8"

[workspace]
members = [
	"arch",
	"fs",
	"init",
	"ipc"
	"kernel",
	"libctl",
	"shell",
	"src",
	"sys",
	"user",
]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
